--- a/rococo-auth/src/main/resources/templates/login.html
+++ b/rococo-auth/src/main/resources/templates/login.html
@@ -17,10 +17,12 @@
                 <div th:if="${param.logout}">
                     <p class="text-warning">You have been logged out.</p>
                 </div>
-                <label class="form__label">Имя пользователя
+                <label class="form__element">
+                    <span class="form__label">Имя пользователя</span>
                     <input class="form__input" type="text" name="username" placeholder="Введите имя пользователя..." required/>
                 </label>
-                <label class="form__label">Пароль
+                <label class="form__element">
+                    <span class="form__label">Пароль</span>
                     <input class="form__input" type="password" name="password" placeholder="Введите пароль..." required/>
                     <button type="button" class="form__password-button"></button>
                 </label>
