--- a/rococo-auth/src/main/resources/templates/login.html
+++ b/rococo-auth/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
             <form class="form" action="#" th:action="@{/login}" method="post">
                 <h1 class="form__header">Ro<span class="form__text_gold">coco</span></h1>
                 <div th:if="${param.error}">
-                    <p class="form__error">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
+                    <p class="form__error login__error">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
                 </div>
                 <div th:if="${param.logout}">
                     <p class="text-warning">You have been logged out.</p>
