--- a/rococo-auth/src/main/resources/static/styles/styles.css
+++ b/rococo-auth/src/main/resources/static/styles/styles.css
@@ -147,6 +147,22 @@ main {
     border: none;
 }
 
+/* Properties to override default browser autocomplete style. -internal-autofill-selected is used for Chrome Canary*/
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus,
+input:-internal-autofill-selected {
+    outline: rgb(var(--color-primary-500) / 0.85) solid 1px;
+    background-color: rgb(var(--color-surface-700));
+    border: none;
+}
+
 .form__link {
     color: rgb(var(--color-primary-500) / 0.85);
     text-decoration: none;
